Capoeira mata um

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/f.js"></script>
     <link rel="stylesheet" href="css/style.css">
-    <title>Penis</title>
+    <title></title>
 </head>
 <body>
-    <h1>H</h1>
+    <h1 style="top: 50%;
+        left: 50%;
+        transform: translate(50%);
+        font-family: cursive;">Caporeira mata um</h1>
 </body>
 </html>
