--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1 style="top: 50%;
         left: 50%;
         transform: translate(50%);
-        font-family: cursive;">Caporeira mata um</h1>
+        font-family: cursive;">Capoeira mata um</h1>
 </body>
 </html>
