--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <h1 style="top: 50%;
         left: 50%;
-        transform: translate(-50%);
+        transform: translateY(-50%);
+        transform: translateX(-50%);
         font-family: cursive;">Capoeira mata um</h1>
 </body>
 </html>
