--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1 style="top: 50%;
         left: 50%;
+        position: absolute;
+        display: flex;
         transform: translateY(-50%);
         transform: translateX(-50%);
         font-family: cursive;">Capoeira mata um</h1>
